# hitsz_course_schedule_ics_converter

./: .gitignore  README.md  exp.ipynb  pyproject.toml
